This is the CHANGELOG file for episoder by Stefan Ott
Get the latest version at http://tools.desire.ch/episoder/
===============================================================================

v0.2.5 (soon)
====================
 * Fixed an alignment problem in showlist (closes #25)

v0.2.4 (19 Jul 2005)
====================
 * Re-arranged the code to remove a 3-episodes-limit in showlist (closes #19)
 * Added command line option to specify the number of days to show (closes #20)
 * Brought back season-episode information in the tvcom plugin (closes #15)
 * Added the possibility to customize the output format (closes #16)
 * Added a small FAQ
 * Thanks to Majeed Goldrick for all the bug reports and feature suggestions
 * Cosmetic changes

v0.2.3 (23 Jun 2005)
====================
 * The tvcom plugin now uses the new "All Seasons" link
 * Cosmetic changes

v0.2.2 (17 Jun 2005)
====================
 * Added LICENSE file
 * install.sh now correctly changes the EPISODER_HOME value
 * Small fixes in the verbose output
 * Created tvcom plugin
 * Replaced all functionality from the tvtome plugin with a warning
 * Now all the available modules are actually loaded
 * Some minor changes in the man page

v0.2.1 (4 Jan 2005)
===================
 * The tvtome plugin now understands UNAIRED episodes
 * Improved the builddb script's debug output
 * Fixed an issue that would print errors for shows with no upcoming episodes
 * The debian files are now part of the main distribution

v0.2.0 (13 Sep 2004)
====================
 * Initial public release